resources/docker-registry/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: docker-registry-ingress
  namespace: docker-registry
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 2048m
  labels:
    app: docker-registry
spec:
  rules:
    - host: registry.infra.v7m.hu
      http:
        paths:
          - path: /
            backend:
              serviceName: docker-registry-production
              servicePort: 5000
  tls:
    - hosts:
        - registry.infra.v7m.hu
      secretName: registry.infra.v7m.hu-secret
